# prompt-anonymizer

./: .flake8  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_vi.md  README_zh.md  SECURITY.md  main.py  mapping.json  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_negative.md  feature_request.md
.github/workflows/: ci.yml  demo-regen.yml  pages.yml  release-apps.yml  release-npm.yml  release.yml  scorecard.yml  weekly-eval.yml
config/: __init__.py  constants.py  nlp_models.py
config/i18n/: en.yaml  ja.yaml
demo/: README.md  demo_openai.py
demo/scripts/: lang-data.mjs  record_extension.mjs  record_social.mjs  record_web.mjs  social-preview.html  social-video.html
demo/tapes/: demo_de.tape  demo_en.tape  demo_es.tape  demo_fr.tape  demo_it.tape  demo_ja.tape  demo_ko.tape  demo_pt.tape  demo_vi.tape  demo_zh.tape
docs/: ADDING_A_LANGUAGE.md  AUDIT.md  EVAL.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  PLAN_INTL_PII.md  RELEASING.md
docs/i18n/: README.md  README.template.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_vi.md  README_zh.md  config.yaml  sections.yaml
docs/i18n/locales/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  ja.yaml  ko.yaml  pt.yaml  vi.yaml  zh.yaml
docs/launch/: CHECKLIST.md  README_ja.md  awesome-list-blurbs.md  chrome-web-store-listing.md  issues-to-file.md  show-hn.md  social-preview.md  zenn-article-ja.md
scripts/: render_readme_i18n.py
src/: __init__.py  openai_handler.py  openai_handler_test.py  presidio_handler.py  presidio_handler_test.py
src/prompt_anonymizer/: __init__.py  cli.py  core.py  exceptions.py  labeling.py  languages.py  normalize.py  scan.py
src/prompt_anonymizer/evals/: __init__.py  __main__.py  generate.py  metrics.py
src/prompt_anonymizer/labels/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  ja.yaml  ko.yaml  pt.yaml  vi.yaml  zh.yaml
src/prompt_anonymizer/recognizers/: __init__.py  credit_card.py  es_phone.py  gliner_ner.py  ja_phone.py  ja_postal_code.py  my_number.py  phone.py  us_phone.py  us_ssn.py  vn_phone.py
tests/eval/: test_accuracy_regression.py
tests/golden/: golden_de.json  golden_en.json  golden_es.json  golden_fr.json  golden_it.json  golden_ja.json  golden_ko.json  golden_pt.json  golden_vi.json  golden_zh.json  parity_cases.json
tests/integration/: test_gliner_backend.py  test_hf_backend.py  test_parity_cases.py  test_pipeline.py
tests/unit/: test_cli.py  test_cli_subprocess.py  test_golden_freshness.py  test_golden_roundtrip.py  test_labeling.py  test_languages.py  test_metrics.py  test_normalize.py  test_pre_commit_hooks.py  test_recognizers.py  test_scan.py
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
web/apps/desktop/: package.json
web/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
web/apps/desktop/src-tauri/capabilities/: default.json
web/apps/desktop/src-tauri/icons/: icon.icns
web/apps/desktop/src-tauri/src/: main.rs
web/apps/desktop/test/: config.test.ts
web/apps/extension/: package.json  sidepanel.html  tsconfig.json  vite.config.ts
web/apps/extension/public/: manifest.json
web/apps/extension/scripts/: postbuild.mjs
web/apps/extension/src/: background.ts  sidepanel.css  sidepanel.ts
web/apps/extension/test/: manifest.test.ts  sidepanel.test.ts
web/apps/proxy-admin/: index.html  package.json  tsconfig.json  vite.config.ts
web/apps/proxy-admin/src/: api.ts  main.ts  style.css
web/apps/proxy-admin/test/: api.test.ts  integration.test.ts  main.test.ts
web/apps/web/: index.html  package.json  vite.config.ts
web/apps/web/src/: main.ts  simulate-reply.ts  style.css  ui-i18n.ts
web/apps/web/test/: autodemo.test.ts  main.test.ts  simulate-flow.test.ts  simulate-reply.test.ts  ui-i18n.test.ts
web/e2e/: package.json  playwright.config.ts  tsconfig.json
web/e2e/scripts/: serve.mjs
web/e2e/tests/: extension.spec.ts  fixtures.ts  ner.spec.ts  web-app.spec.ts  web-golden-roundtrip.spec.ts
web/scripts/: check-docs-freshness.mjs  check-docs-links.mjs
