[tool.poetry]
name = "promptAnonymizer"
version = "0.1.0"
description = "Anonymize personal information in prompts before sending them to Chat AI."
authors = ["akazah <679040+akazah@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
presidio-analyzer = "^2.2.32"
presidio-anonymizer = "^2.2.32"
spacy = "^3.5.3"
fire = "^0.5.0"
faker = "^18.9.0"
pytest = "^7.3.1"
openai = "^0.27.7"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
