[package]
name = "prompt-anonymizer-desktop"
version = "0.2.0"
description = "Anonymize PII before it reaches an LLM - on-device desktop app"
authors = ["akazah"]
license = "MIT"
edition = "2021"

[lib]
name = "prompt_anonymizer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
strip = true
